--- a/webroot/css/drawer.css
+++ b/webroot/css/drawer.css
@@ -16,7 +16,7 @@ body {
   }
   
   .sidenav a {
-    padding: 8px 8px 8px 32px;
+    padding: 20px 8px 20px 32px;
     text-decoration: none;
     font-size: 20px;
     color: gainsboro;
@@ -31,9 +31,9 @@ body {
   }
   
   .sidenav .closebtn {
-    position: absolute;
+    position:relative;
     top: 0;
-    right: 25px;
+    left: 100px;
     font-size: 36px;
     margin-left: 50px;
   }
@@ -56,4 +56,17 @@ body {
   i{
     width: 12px;
     margin-right: 4px;
+  }
+
+  .yeet a{
+    padding: 0px 0px 0px 0px;
+    position: absolute;
+    top: 10px;
+    right: 25px;
+    left: 25px;
+    
+  }
+
+  .yeet a:hover{
+      background-color: #0069b1;
   }
