--- a/webroot/css/drawer.css
+++ b/webroot/css/drawer.css
@@ -91,10 +91,11 @@ body {
 
   .toper {  
     position: fixed;
-    width: 100%;
+    width: 3%;
+    height: 100%;
     padding: 23px;
     border: 5px black;
     margin: 0;
-    background-color: #98B6E4;
+    background-color: #0069B1;
     z-index: 2;
   }
