--- a/webroot/css/drawer.css
+++ b/webroot/css/drawer.css
@@ -47,6 +47,10 @@ body {
   .sidenav b{
       color: white;
   }
+
+  .sideNavTable {
+    margin: auto;
+  }
   
   @media screen and (max-height: 450px) {
     .sidenav {padding-top: 15px;}
