--- a/webroot/css/cake.css
+++ b/webroot/css/cake.css
@@ -214,3 +214,13 @@ th {
         content: " \2190";
     }
 }
+
+.searchbar{
+    text-align: right;
+    
+}
+
+.searchtitle{
+    margin: auto;
+}
+
