--- a/webroot/css/cake.css
+++ b/webroot/css/cake.css
@@ -63,6 +63,17 @@ body {
     box-shadow: 0 7px 14px 0 rgba(60, 66, 87, 0.1),
         0 3px 6px 0 rgba(0, 0, 0, 0.07);
 }
+
+.contenter {
+    padding: 5%;
+    margin: 16%;
+    background: #ffffff;
+    border-radius: 0.4rem;
+    /* Thanks Stripe */
+    box-shadow: 0 7px 14px 0 rgba(60, 66, 87, 0.1),
+        0 3px 6px 0 rgba(0, 0, 0, 0.07);
+}
+
 .actions a {
     font-weight: bold;
     padding: 0 0.4rem;
