--- a/webroot/css/cake.css
+++ b/webroot/css/cake.css
@@ -66,7 +66,9 @@ body {
 
 .contenter {
     padding: 5%;
-    margin: 16%;
+    margin-left: 16%;
+    margin-right: 16%;
+    margin-top: 4%;
     background: #ffffff;
     border-radius: 0.4rem;
     /* Thanks Stripe */
