--- a/webroot/css/drawer.css
+++ b/webroot/css/drawer.css
@@ -14,6 +14,12 @@ body {
     transition: 0.5s;
     padding-top: 10px;
   }
+
+  .highlight{
+    
+    background-color:black     ;
+    opacity:0.7;
+  }
   
   .sidenav a {
     padding: 20px 8px 20px 32px;
