--- a/webroot/css/drawer.css
+++ b/webroot/css/drawer.css
@@ -1,7 +1,7 @@
 body {
     font-family: "Lato", sans-serif;
   }
-  
+
   .sidenav {
     height: 100%;
     width: 0;
@@ -16,11 +16,12 @@ body {
   }
 
   .highlight{
-    
-    background-color:darkblue     ;
-    opacity:0.7;
+      color: #f1f1f1;
+      background-color:#000;
+      opacity:0.5;
+      font-weight:bold;
   }
-  
+
   .sidenav a {
     padding: 20px 8px 20px 32px;
     text-decoration: none;
@@ -29,13 +30,14 @@ body {
     display: block;
     transition: 0.3s;
   }
-  
+
   .sidenav a:hover {
     color: #f1f1f1;
     background-color:#000;
     opacity:0.5;
+      font-weight:bold;
   }
-  
+
   .sidenav .closebtn {
     position:relative;
     top: 0;
@@ -53,7 +55,7 @@ body {
   .sidenav b{
       color: white;
   }
-  
+
   @media screen and (max-height: 450px) {
     .sidenav {padding-top: 15px;}
     .sidenav a {font-size: 18px;}
@@ -70,7 +72,7 @@ body {
     top: 20px;
     right: 25px;
     left: 25px;
-    
+
   }
 
   .yeet a:hover{
@@ -95,7 +97,7 @@ body {
     padding-bottom: 200px;
   }
 
-  .toper {  
+  .toper {
     position: fixed;
     width: 3%;
     height: 100%;
