--- a/webroot/css/drawer.css
+++ b/webroot/css/drawer.css
@@ -1,8 +1,8 @@
 body {
     font-family: "Lato", sans-serif;
-  }
+}
 
-  .sidenav {
+.sidenav {
     height: 100%;
     width: 0;
     position: fixed;
@@ -13,91 +13,96 @@ body {
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 10px;
-  }
+}
 
-  .highlight{
-      color: #f1f1f1;
-      background-color:#000;
-      opacity:0.5;
-      font-weight:bold;
-  }
+.highlight {
+    color: #f1f1f1;
+    background-color: #000;
+    opacity: 0.5;
+    font-weight: bold;
+}
 
-  .sidenav a {
+.sidenav a {
     padding: 20px 8px 20px 32px;
     text-decoration: none;
     font-size: 20px;
     color: gainsboro;
     display: block;
     transition: 0.3s;
-  }
+}
 
-  .sidenav a:hover {
+.sidenav a:hover {
     color: #f1f1f1;
-    background-color:#000;
-    opacity:0.5;
-      font-weight:bold;
-  }
+    background-color: #000;
+    opacity: 0.5;
+    font-weight: bold;
+}
 
-  .sidenav .closebtn {
-    position:relative;
+.sidenav .closebtn {
+    position: relative;
     top: 0;
     left: 100px;
     font-size: 36px;
     margin-left: 50px;
-  }
+}
 
-  .sidenav b:hover {
+.sidenav b:hover {
     color: #f1f1f1;
-    opacity:0.5;
+    opacity: 0.5;
     cursor: pointer;
-  }
+}
 
-  .sidenav b{
-      color: white;
-  }
+.sidenav b {
+    color: white;
+}
 
-  @media screen and (max-height: 450px) {
-    .sidenav {padding-top: 15px;}
-    .sidenav a {font-size: 18px;}
-  }
+@media screen and (max-height: 450px) {
+    .sidenav {
+        padding-top: 15px;
+    }
 
-  i{
+    .sidenav a {
+        font-size: 18px;
+    }
+}
+
+i {
     width: 12px;
     margin-right: 4px;
-  }
+}
 
-  .yeet a{
+.yeet a {
     padding: 0px 0px 0px 0px;
     position: absolute;
     top: 20px;
     right: 25px;
     left: 25px;
 
-  }
+}
 
-  .yeet a:hover{
-      background-color: #0069b1;
-  }
+.yeet a:hover {
+    background-color: #0069b1;
+}
 
-  hr {
-    border-top:2px solid white;
+hr {
+    border-top: 2px solid white;
     position: relative;
     width: 50%;
     margin-top: 38%;
     margin-left: 50px;
-  }
+}
 
-  .top-nav-title{
+.top-nav-title {
     position: relative;
-    margin:auto;
+    margin: auto;
     padding-top: 60px;
-  }
+}
 
-  body{
+body {
     padding-bottom: 200px;
-  }
+}
 
-  .toper {
+.toper {
     position: fixed;
     width: 3%;
     height: 100%;
@@ -106,9 +111,8 @@ body {
     margin: 0;
     background-color: #0069B1;
     z-index: 2;
-  }
+}
 
-  main{
-    padding-left:50px;
-  }
-
+main {
+    padding-left: 50px;
+}
